--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='css/style.css'>
-    <title>Document</title>
+    <title>Blog during travels</title>
 </head>
 <body>
-        <h1> Let's talk about it</h1>  
-        <header>Blog during travels</header>
-        <main></main>
+        
+        <header>
+          <h1> <p ALIGN= 'center' Blog during travels > </h1>
+            <p> <p ALIGN= 'center'> Let's talk about it</p></p>
+            <nav>
+
+            </nav>
+        </header>
+        <main>
+            <h2>BLOG</h2>
+            <article>
+                <h3>Oui oui Paris</h3>
+<img src='IMG_2111.jpg'>
+            </article>
+
+            <article>
+
+            </article>
+        </main>
         <footer></footer>
 
 </body>
