--- a/index.html
+++ b/index.html
@@ -2,16 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='css/style.css'>
-    <title>Document</title>
+    <link rel='stylesheet' href='Style.css'>
+    <title>Travels Blog</title>
 </head>
 <body>
-        <h1> Let's talk about it</h1>  
-        <header>Blog during travels</header>
-        <main></main>
-        <footer></footer>
+        
+        <header>
+            <h1>Travels with Nine</h1>
+        </header>
+<p><h3>Hello friends, welcome to my page!</h3></p>
+<hr>
+<article>Welkom bij mijn travel blog! Mijn naam is Nine, number 9, negen en 
+    ook wel nientje. Ik ben begonnen met deze blog omdat ik schrijven 
+    ontzettend leuk vind en ik dat hopelijk ook kan delen met jullie. 
+    Omdat ik vrij abrupt ben begonnen met deze blog heb ik voor jullie 
+    drie ongelofelijke inspiratievolle korte reizen toegevoegd die me een 
+    ontzettende fijne herinneringen van zijn bij gebleven. </article>
+<hr>
+    <ul id="Pics_of_travels">
+       <li><img src='IMG_2111.jpg'><p><a href="Paris.html">Paris</p></a></li> 
+        <li><img src='IMG_1603.jpg'><p><a href="Mallorca.html">Mallorca</a></p></li>
+        <li><img src='IMG_2581.jpg'><p><a href="Tenerife.html">Tenerife</a></p></li>
+    </ul>
+<hr>
+
+
+            </article>
+
+            <article>
+
+            </article>
+        </main>
+        <footer>
+       <p><a href="https://www.facebook.com/ninee.revius">Nine on Facebook</a></p>
+       <p><a href="https://www.instagram.com/ninemichella/">Nine on Instagram</a></p>
+        </footer>
 
 </body>
 </html>
