--- a/index.html
+++ b/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel='stylesheet' href='css/style.css'>
-    <title>Blog during travels</title>
+    <link rel='stylesheet' href='Style.css'>
+    <title>Travels Blog</title>
 </head>
 <body>
-        
         <header>
-          <h1> <p ALIGN= 'center' Blog during travels > </h1>
-            <p> <p ALIGN= 'center'> Let's talk about it</p></p>
-            <nav>
-
-            </nav>
+            <h1>Travels with Nine</h1>
         </header>
-        <main>
-            <h2>BLOG</h2>
-            <article>
-                <h3>Oui oui Paris</h3>
-<img src='IMG_2111.jpg'>
-            </article>
+<main>
 
-            <article>
+<p><h3>Hello friends, welcome to my page!</h3></p>
+<hr>
+<article>Welkom bij mijn travel blog! Mijn naam is Nine, number 9, negen en 
+    ook wel nientje. Ik ben begonnen met deze blog omdat ik schrijven 
+    ontzettend leuk vind en ik dat hopelijk ook kan delen met jullie. 
+    Omdat ik vrij abrupt ben begonnen met deze blog heb ik voor jullie 
+    drie ongelofelijke inspiratievolle korte reizen toegevoegd die me een 
+    ontzettende fijne herinneringen van zijn bij gebleven. </article>
+<hr>
+    <ul id="Pics_of_travels">
+       <li><img src="fotosvoorweb/IMG_2111.jpg" alt="Foto van de eiffeltoren"><p><a href="Paris.html"><button>Parijs</button></p></a></li> 
+        <li><img src="fotosvoorweb/IMG_1603.jpg"alt="Foto van persoon op de berg"><p><a href="Mallorca.html"><button>Mallorca</button></a></p></li>
+        <li><img src="fotosvoorweb/IMG_2581.jpg"alt="Foto van persoon tussen de rotsen"><p><a href="Tenerife.html"><button>Tenerife</button></a></p></li>
+    </ul>
+<hr>
+     </article>
 
-            </article>
         </main>
-        <footer></footer>
+            <footer>
+                <form action="mailto:nin.e@live.nl" method="post" enctype="text/plain">
+                    Naam:<br>
+                    <input class="form-input" type="text" name="name"><br><br>
+                    E-mail:<br>
+                    <input class="form-input" type="text" name="mail"><br><br>
+                    Vraag:<br>
+                    <textarea class="form-input" name="comments">Talk to me!</textarea><br>
+                    <input class="button" type="submit" value="Send">
+                </form>
+                <p><a href="https://www.facebook.com/ninee.revius"><button>Nine on Facebook</button></a></p>
+                <p><a href="https://www.instagram.com/ninemichella/"><button>Nine on Instagram</button></a></p>
+                <h4>2019&copy;Nines.Travels</h4>
+        </footer>
 
 </body>
 </html>
