--- a/Paris.html
+++ b/Paris.html
@@ -65,17 +65,21 @@
              omgeving rondom het hotel om daar even de stad te bezoeken en even wat winkeltjes te bekijken. 
         </p>   
         <p> <h2>Geweldige ervaring</h2>
-             In de avond zijn we samen wat gaan eten bij een goed restaurant waar we een 2 gangendiner hebben gegeten om vervolgens weer door <br>
+             In de avond zijn we samen wat gaan eten bij een goed restaurant waar we een 2 gangendiner hebben gegeten om vervolgens weer door 
              te gaan naar de Eiffeltoren, maar deze keer in de nacht. Wat een prachtig gezicht om het gehele monument opgelicht te zien. 
-             We hebben hetzelfde rondje herhaald als wat we overdag hebben gedaan. Echter was het deze keer ontzettend druk op het platform, <br>
+             We hebben hetzelfde rondje herhaald als wat we overdag hebben gedaan. Echter was het deze keer ontzettend druk op het platform,
              wij hadden geen flauw benul waarom dit het geval was. Dus toch maar even een kijkje nemen waarom dit nou het geval was. 
-             Toen we op het platform aankwamen stonden we wederom foto’s te maken en te genieten van de sfeer en de livemuziek die werd gespeeld. <br>
-             Maar toen gebeurde het, de klok sloeg heel en de hele Eiffeltoren lichtten op. We hebben genoten van ieder moment en zijn <br>
-             toen samen weer terug gelopen naar het hotel, want de volgende ochtend was het sprookje alweer voorbij. <br>
-             Parijs was een perfecte en romantische ervaring en ik zou het zo weer doen. <br>
+             Toen we op het platform aankwamen stonden we wederom foto’s te maken en te genieten van de sfeer en de livemuziek die werd gespeeld.
+             Maar toen gebeurde het, de klok sloeg heel en de hele Eiffeltoren lichtten op. We hebben genoten van ieder moment en zijn 
+             toen samen weer terug gelopen naar het hotel, want de volgende ochtend was het sprookje alweer voorbij. 
+             Parijs was een perfecte en romantische ervaring en ik zou het zo weer doen. 
         </p>
     </main>
 </article>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H9TzD5yFu7E" frameborder="0" 
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+
     <footer>
             <form action="mailto:nin.e@live.nl" method="post" enctype="text/plain">
                 Naam:<br>
@@ -90,14 +94,5 @@
             <p><a href="https://www.instagram.com/ninemichella/"><button>Nine on Instagram</button></a></p>
             <h4>2019&copy;Nines.Travels</h4>
     </footer>
-
-        <link rel='stylesheet' href='Style.css'>
-    <title>Paris/title>
-</head>
-<body>
-        <h1>Paris</h1>
-<hr>
-<a href="index.html"><button>Travel back with Nine</button></a>
-    
 </body>
 </html>
