--- a/Paris.html
+++ b/Paris.html
@@ -9,11 +9,10 @@
 <body id="idparis">
     <a href="index.html"><button>Travel back with Nine</button></a>
     <main>
+            <h1>Parijs</h1>
         <article>
-             <h1>Parijs</h1>
-        <p>
-            <hr>
-            <h2>Spontane planning</h2>
+             
+        <p> <h2>Spontane planning</h2>
              Parijs was een weliswaar een bliksembezoek maar zo een ontzettend mooie ervaring. <br>
              Samen met iemand die ik had ontmoet in Amsterdam ben ik tussen werk door vertrokken naar Parijs.<br>
         </p>
