--- a/Tenerife.html
+++ b/Tenerife.html
@@ -16,12 +16,13 @@
 <hr>
 <p>
         <h2>De buitenlandse stage</h2>
+        <img id="idlosgig" src="fotosvoorweb/IMG_3361.PNG" alt="Los Gigantes bij de oceaan"align="right">
         Tenerife was een ontzettende leerzame ervaring mede omdat <br>
         dit een stage was in het buitenland. Op deze reis naar de heerlijke <br>
         tropische temperatuurtjes heb ik een stukje cultuur mogen ervaring wat<br>
          je als vakantieganger minder snel zal oppikken.     <br>
 </a>
-<img id="idlosgig" src="fotosvoorweb/IMG_3361.PNG" alt="Los Gigantes bij de oceaan"align="right">
+
 <p>     
         <h2>Spanning</h2>
         Allereerst ben ik begonnen met boeken samen met een klasgenootje <br>
@@ -39,6 +40,7 @@
         het vliegveld om vervolgens even emotioneel afscheid te nemen. <br>
         Officieel zou ik dan echt bijna een halfjaar weg zijn uit Nederland. <br>
 </p>
+
 <p>     Uiteindelijk zat ik daar dus, in het vliegtuig. Niet te vergeten naast <br>
         een verliefd stelletje wat niet van elkaar af kon blijven. Ach ja.. <br>
         Anyway, het was zo'n vijf uurtjes vliegen en uiteindelijk kwam ik daar dan<br>
@@ -46,10 +48,11 @@
         de warme zon op m'n verdorven vliegtuighuidje. Ik stapte in de eerste beste <br>
         taxi die me naar H10, Las Palmeras kon brengen. Met een klein halfuurtje stond<br>
         ik voor het gigantische hotel waar ik in de front office stage ging lopen.
+        <img id="idpizzabeach" src="fotosvoorweb/IMG_3364.PNG" alt="Pizza bij het strand" align="right"> 
 </p>    
 
    
-<img id="idpizzabeach" src="fotosvoorweb/IMG_3364.PNG" alt="Pizza bij het strand" align="right"> 
+
 <p>    <h2>Het hotel</h2>
         Eenmaal binnengekomen in het hotel ontmoetten ik daar de staff van de front office.<br>
         Een vrolijke man sprak me toe en wees mij m'n kamer. In Tenerife heb ik ontzettend <br> 
@@ -70,20 +73,19 @@
         <i>Siam waterpark</i>. Ik heb geleerd hoe een andere cultuur is in de werksfeer en hoe het is
         om jezelf aan te passen in een compleet andere omgeving. Mijn zelfstandigheid is ontzettend gegroeid
         na deze reis en ik heb ontzettend lieve en leuke mensen mogen ontmoeten.
-<br>
-<br>
-<br>
-<br>
-<br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZIVL4q3DUgs" frameborder="0" 
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe>
-<br>
-<br>
-<br>
+
+
+        
 </p>
+<br>
+<br>
 </article>
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tTAQ7HvS-BM" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"         
+                allowfullscreen>
+ </iframe>
 </main> 
 
 <footer>
